add docs, bump requirements

--- a/bin/index.html
+++ b/bin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>META Sites</title>
+  <title>INTE Sites</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -27,8 +27,8 @@
     <div class="panel panel-success">
       <div class="panel-heading">INTE Africa Live Sites</div>
       <div class="list-group">
-        <a href="https://hindu_mandal.inte.clinicedc.org/" class="list-group-item">Hindu Mandal</a>
-        <a href="https://amana.inte.clinicedc.org/" class="list-group-item">Amana</a>
+        <a href="https://ug.inte.clinicedc.org/" class="list-group-item">Uganda</a>
+        <a href="https://tz.inte.clinicedc.org/" class="list-group-item">Tanzania</a>
 
       </div>
       </div></div>
@@ -37,8 +37,8 @@
     <div class="panel panel-danger">
       <div class="panel-heading">INTE Africa Test Sites</div>
       <div class="list-group">
-        <a href="https://hindu_mandal.uat.inte.clinicedc.org/" class="list-group-item">Hindu Mandal</a>
-        <a href="https://amana.uat.inte.clinicedc.org/" class="list-group-item">Amana</a>
+        <a href="https://ug.uat.inte.clinicedc.org/" class="list-group-item">Uganda (UAT)</a>
+        <a href="https://tz.uat.inte.clinicedc.org/" class="list-group-item">Tanzania (UAT)</a>
       </div>
       </div></div>
 
