--- a/bin/index.html
+++ b/bin/index.html
@@ -36,8 +36,8 @@
     <div class="panel panel-danger">
       <div class="panel-heading">INTE Africa Test Sites</div>
       <div class="list-group">
-        <a href="https://ug.uat.inte.clinicedc.org/" class="list-group-item">Uganda (UAT)</a>
-        <a href="https://tz.uat.inte.clinicedc.org/" class="list-group-item">Tanzania (UAT)</a>
+        <a href="https://uat.ug.inte.clinicedc.org/" class="list-group-item">Uganda (UAT)</a>
+        <a href="https://uat.tz.inte.clinicedc.org/" class="list-group-item">Tanzania (UAT)</a>
       </div>
       </div></div>
 
