--- a/bin/www/inte.clinicedc.org/index.html
+++ b/bin/www/inte.clinicedc.org/index.html
@@ -34,10 +34,10 @@
 
   <div class="col-sm-4">
     <div class="panel panel-danger">
-      <div class="panel-heading">INTE Africa Test Sites</div>
+      <div class="panel-heading">INTE Africa UAT Sites</div>
       <div class="list-group">
-        <a href="https://uat.ug.inte.clinicedc.org/" class="list-group-item">Uganda (UAT)</a>
-        <a href="https://uat.tz.inte.clinicedc.org/" class="list-group-item">Tanzania (UAT)</a>
+        <a href="https://uat.inte.clinicedc.org/ug" class="list-group-item">Uganda (UAT)</a>
+        <a href="https://uat.inte.clinicedc.org/tz" class="list-group-item">Tanzania (UAT)</a>
       </div>
       </div></div>
 
