--- a/bin/www/inte.clinicedc.org/index.html
+++ b/bin/www/inte.clinicedc.org/index.html
@@ -27,14 +27,14 @@
     <div class="panel panel-success">
       <div class="panel-heading">INTE Africa Sites</div>
       <div class="list-group">
-        <a href="https://ug.inte.clinicedc.org/" class="list-group-item">Uganda</a>
-        <a href="https://tz.inte.clinicedc.org/" class="list-group-item">Tanzania</a>
+        <a href="https://inte.clinicedc.org/ug" class="list-group-item">Uganda</a>
+        <a href="https://inte.clinicedc.org/tz" class="list-group-item">Tanzania</a>
       </div>
       </div></div>
 
   <div class="col-sm-4">
     <div class="panel panel-danger">
-      <div class="panel-heading">INTE Africa UAT Sites</div>
+      <div class="panel-heading">INTE Africa UAT Sites (Test)</div>
       <div class="list-group">
         <a href="https://uat.inte.clinicedc.org/ug" class="list-group-item">Uganda (UAT)</a>
         <a href="https://uat.inte.clinicedc.org/tz" class="list-group-item">Tanzania (UAT)</a>
