--- a/bin/nginx/www/html/live.inte.clinicedc.org/ug/index.html
+++ b/bin/nginx/www/html/live.inte.clinicedc.org/ug/index.html
@@ -25,7 +25,7 @@
     <div class="panel panel-success">
       <div class="panel-heading">INTE Africa Sites: Uganda</div>
       <div class="list-group">
-         <i class="fas fa-reply fa-fw" aria-hidden="true"></i> <a href="https://live.inte.clinicedc.org/" class="list-group-item">Home</a>
+         <a href="https://live.inte.clinicedc.org/" class="list-group-item"><i class="fas fa-reply fa-fw" aria-hidden="true"></i> Home</a>
          <a href="https://bugamba.ug.inte.clinicedc.org/" class="list-group-item">Bugamba</a>
          <a href="https://bukulula.ug.inte.clinicedc.org/" class="list-group-item">Bukulula</a>
          <a href="https://buwambo.ug.inte.clinicedc.org/" class="list-group-item">Buwambo</a>
