--- a/bin/nginx/www/html/live.inte.clinicedc.org/tz/index.html
+++ b/bin/nginx/www/html/live.inte.clinicedc.org/tz/index.html
@@ -22,7 +22,7 @@
 <div class="row">
   <div class="col-sm-4"></div>
   <div class="col-sm-4">
-    <div class="panel panel-danger">
+    <div class="panel panel-success">
       <div class="panel-heading">INTE Africa Sites: Tanzania</div>
       <div class="list-group">
          <a href="https://live.inte.clinicedc.org/" class="list-group-item"><i class="fas fa-reply fa-fw" aria-hidden="true"></i> Home</a>
