add TZ sites to index files

--- a/bin/nginx/www/html/uat.inte.clinicedc.org/tz/index.html
+++ b/bin/nginx/www/html/uat.inte.clinicedc.org/tz/index.html
@@ -25,7 +25,23 @@
     <div class="panel panel-danger">
       <div class="panel-heading">INTE Africa UAT Sites: Tanzania</div>
       <div class="list-group">
-         <a href="https://uat.inte.clinicedc.org/" class="list-group-item"><i class="fas fa-reply fa-fw" aria-hidden="true"></i> Home</a>
+        <a href="https://uat.inte.clinicedc.org/" class="list-group-item"><i class="fas fa-reply fa-fw" aria-hidden="true"></i> Home</a>
+        <a href="https://bagamoyo.uat.tz.inte.clinicedc.org/" class="list-group-item">Bagamoyo District hospital</a>
+        <a href="https://buguruni.uat.tz.inte.clinicedc.org/" class="list-group-item">Buguruni Health Centre</a>
+        <a href="https://rugambwa.uat.tz.inte.clinicedc.org/" class="list-group-item">Cardinal Rugambwa Hospital</a>
+        <a href="https://consolata.uat.tz.inte.clinicedc.org/" class="list-group-item">Consolata Sisters Dispensary</a>
+        <a href="https://kinondoni.uat.tz.inte.clinicedc.org/" class="list-group-item">Kinondoni Hospital</a>
+        <a href="https://kisarawe.uat.tz.inte.clinicedc.org/" class="list-group-item">Kisarawe District Hospital</a>
+        <a href="https://magomeni.uat.tz.inte.clinicedc.org/" class="list-group-item">Magomeni Health Centre</a>
+        <a href="https://mbagala.uat.tz.inte.clinicedc.org/" class="list-group-item">Mbagala Rangi Tatu Hospital</a>
+        <a href="https://mnazi.uat.tz.inte.clinicedc.org/" class="list-group-item">Mnazi Mmoja Hospital</a>
+        <a href="https://sinza.uat.tz.inte.clinicedc.org/" class="list-group-item">Sinza Hospital</a>
+        <a href="https://vincent.uat.tz.inte.clinicedc.org/" class="list-group-item">St.Vincent Health Centre</a>
+        <a href="https://tambuka.uat.tz.inte.clinicedc.org/" class="list-group-item">Tambuka Reli Dispensary</a>
+        <a href="https://tandale.uat.tz.inte.clinicedc.org/" class="list-group-item">Tandale Health Centre</a>
+        <a href="https://tegeta.uat.tz.inte.clinicedc.org/" class="list-group-item">Tegeta Mission Centre</a>
+        <a href="https://temeke.uat.tz.inte.clinicedc.org/" class="list-group-item">Temeke Regional Referral Hospital</a>
+        <a href="https://yombo.uat.tz.inte.clinicedc.org/" class="list-group-item">Yombo Vituka Health Centre</a>
       </div>
     </div>
   </div>
