add site id to welcome screen

--- a/bin/nginx/www/html/live.inte.clinicedc.org/tz/index.html
+++ b/bin/nginx/www/html/live.inte.clinicedc.org/tz/index.html
@@ -26,22 +26,22 @@
       <div class="panel-heading">INTE Africa Sites: Tanzania</div>
       <div class="list-group">
         <a href="https://live.inte.clinicedc.org/" class="list-group-item"><i class="fas fa-reply fa-fw" aria-hidden="true"></i> Home</a>
-        <a href="https://bagamoyo.tz.inte.clinicedc.org/" class="list-group-item">Bagamoyo District hospital</a>
-        <a href="https://buguruni.tz.inte.clinicedc.org/" class="list-group-item">Buguruni Health Centre</a>
-        <a href="https://rugambwa.tz.inte.clinicedc.org/" class="list-group-item">Cardinal Rugambwa Hospital</a>
-        <a href="https://consolata.tz.inte.clinicedc.org/" class="list-group-item">Consolata Sisters Dispensary</a>
-        <a href="https://kinondoni.tz.inte.clinicedc.org/" class="list-group-item">Kinondoni Hospital</a>
-        <a href="https://kisarawe.tz.inte.clinicedc.org/" class="list-group-item">Kisarawe District Hospital</a>
-        <a href="https://magomeni.tz.inte.clinicedc.org/" class="list-group-item">Magomeni Health Centre</a>
-        <a href="https://mbagala.tz.inte.clinicedc.org/" class="list-group-item">Mbagala Rangi Tatu Hospital</a>
-        <a href="https://mnazi.tz.inte.clinicedc.org/" class="list-group-item">Mnazi Mmoja Hospital</a>
-        <a href="https://sinza.tz.inte.clinicedc.org/" class="list-group-item">Sinza Hospital</a>
-        <a href="https://vincent.tz.inte.clinicedc.org/" class="list-group-item">St.Vincent Health Centre</a>
-        <a href="https://tambuka.tz.inte.clinicedc.org/" class="list-group-item">Tambuka Reli Dispensary</a>
-        <a href="https://tandale.tz.inte.clinicedc.org/" class="list-group-item">Tandale Health Centre</a>
-        <a href="https://tegeta.tz.inte.clinicedc.org/" class="list-group-item">Tegeta Mission Centre</a>
-        <a href="https://temeke.tz.inte.clinicedc.org/" class="list-group-item">Temeke Regional Referral Hospital</a>
-        <a href="https://yombo.tz.inte.clinicedc.org/" class="list-group-item">Yombo Vituka Health Centre</a>
+        <a href="https://bagamoyo.tz.inte.clinicedc.org/" class="list-group-item">Bagamoyo District hospital 201</a>
+        <a href="https://buguruni.tz.inte.clinicedc.org/" class="list-group-item">Buguruni Health Centre 202</a>
+        <a href="https://rugambwa.tz.inte.clinicedc.org/" class="list-group-item">Cardinal Rugambwa Hospital 203</a>
+        <a href="https://consolata.tz.inte.clinicedc.org/" class="list-group-item">Consolata Sisters Dispensary 204</a>
+        <a href="https://kinondoni.tz.inte.clinicedc.org/" class="list-group-item">Kinondoni Hospital 205</a>
+        <a href="https://kisarawe.tz.inte.clinicedc.org/" class="list-group-item">Kisarawe District Hospital 206</a>
+        <a href="https://magomeni.tz.inte.clinicedc.org/" class="list-group-item">Magomeni Health Centre 207</a>
+        <a href="https://mbagala.tz.inte.clinicedc.org/" class="list-group-item">Mbagala Rangi Tatu Hospital 208</a>
+        <a href="https://mnazi.tz.inte.clinicedc.org/" class="list-group-item">Mnazi Mmoja Hospital 209</a>
+        <a href="https://sinza.tz.inte.clinicedc.org/" class="list-group-item">Sinza Hospital 210</a>
+        <a href="https://vincent.tz.inte.clinicedc.org/" class="list-group-item">St.Vincent Health Centre 211</a>
+        <a href="https://tambuka.tz.inte.clinicedc.org/" class="list-group-item">Tambuka Reli Dispensary 212</a>
+        <a href="https://tandale.tz.inte.clinicedc.org/" class="list-group-item">Tandale Health Centre 213</a>
+        <a href="https://tegeta.tz.inte.clinicedc.org/" class="list-group-item">Tegeta Mission Centre 214</a>
+        <a href="https://temeke.tz.inte.clinicedc.org/" class="list-group-item">Temeke Regional Referral Hospital 215</a>
+        <a href="https://yombo.tz.inte.clinicedc.org/" class="list-group-item">Yombo Vituka Health Centre 216</a>
       </div>
     </div>
   </div>
