--- a/bin/nginx/www/html/live.inte.clinicedc.org/ug/index.html
+++ b/bin/nginx/www/html/live.inte.clinicedc.org/ug/index.html
@@ -26,24 +26,24 @@
       <div class="panel-heading">INTE Africa Sites: Uganda</div>
       <div class="list-group">
          <a href="https://live.inte.clinicedc.org/" class="list-group-item"><i class="fas fa-reply fa-fw" aria-hidden="true"></i> Home</a>
-         <a href="https://bugamba.ug.inte.clinicedc.org/" class="list-group-item">Bugamba</a>
-         <a href="https://bukulula.ug.inte.clinicedc.org/" class="list-group-item">Bukulula</a>
-         <a href="https://buwambo.ug.inte.clinicedc.org/" class="list-group-item">Buwambo</a>
-         <a href="https://bwizibwera.ug.inte.clinicedc.org/" class="list-group-item">Bwizibwera</a>
-         <a href="https://kajjansi.ug.inte.clinicedc.org/" class="list-group-item">Kajjansi</a>
-         <a href="https://kasangati.ug.inte.clinicedc.org/" class="list-group-item">Kasangati</a>
-         <a href="https://kasanje.ug.inte.clinicedc.org/" class="list-group-item">Kasanje</a>
-         <a href="https://kinoni.ug.inte.clinicedc.org/" class="list-group-item">Kinoni</a>
-         <a href="https://kojja.ug.inte.clinicedc.org/" class="list-group-item">Kojja</a>
-         <a href="https://kyamulibwa.ug.inte.clinicedc.org/" class="list-group-item">Kyamulibwa</a>
-         <a href="https://kyazanga.ug.inte.clinicedc.org/" class="list-group-item">Kyazanga</a>
-         <a href="https://mpigi.ug.inte.clinicedc.org/" class="list-group-item">Mpigi</a>
-         <a href="https://muduma.ug.inte.clinicedc.org/" class="list-group-item">Muduma</a>
-         <a href="https://namayumba.ug.inte.clinicedc.org/" class="list-group-item">Namayumba</a>
-         <a href="https://namulonge.ug.inte.clinicedc.org/" class="list-group-item">Namulonge</a>
-         <a href="https://ruhoko.ug.inte.clinicedc.org/" class="list-group-item">Ruhoko</a>
-         <a href="https://sekiwunga.ug.inte.clinicedc.org/" class="list-group-item">Sekiwunga</a>
-         <a href="https://tikalu.ug.inte.clinicedc.org/" class="list-group-item">Tikalu</a>
+         <a href="https://bugamba.ug.inte.clinicedc.org/" class="list-group-item">Bugamba 101</a>
+         <a href="https://bukulula.ug.inte.clinicedc.org/" class="list-group-item">Bukulula 106</a>
+         <a href="https://buwambo.ug.inte.clinicedc.org/" class="list-group-item">Buwambo 110</a>
+         <a href="https://bwizibwera.ug.inte.clinicedc.org/" class="list-group-item">Bwizibwera 102</a>
+         <a href="https://kajjansi.ug.inte.clinicedc.org/" class="list-group-item">Kajjansi 111</a>
+         <a href="https://kasangati.ug.inte.clinicedc.org/" class="list-group-item">Kasangati 115</a>
+         <a href="https://kasanje.ug.inte.clinicedc.org/" class="list-group-item">Kasanje 114</a>
+         <a href="https://kinoni.ug.inte.clinicedc.org/" class="list-group-item">Kinoni 103</a>
+         <a href="https://kojja.ug.inte.clinicedc.org/" class="list-group-item">Kojja 107</a>
+         <a href="https://kyamulibwa.ug.inte.clinicedc.org/" class="list-group-item">Kyamulibwa 118</a>
+         <a href="https://kyazanga.ug.inte.clinicedc.org/" class="list-group-item">Kyazanga 105</a>
+         <a href="https://mpigi.ug.inte.clinicedc.org/" class="list-group-item">Mpigi 108</a>
+         <a href="https://muduma.ug.inte.clinicedc.org/" class="list-group-item">Muduma 117</a>
+         <a href="https://namayumba.ug.inte.clinicedc.org/" class="list-group-item">Namayumba 109</a>
+         <a href="https://namulonge.ug.inte.clinicedc.org/" class="list-group-item">Namulonge 113</a>
+         <a href="https://ruhoko.ug.inte.clinicedc.org/" class="list-group-item">Ruhoko 104</a>
+         <a href="https://sekiwunga.ug.inte.clinicedc.org/" class="list-group-item">Sekiwunga 116</a>
+         <a href="https://tikalu.ug.inte.clinicedc.org/" class="list-group-item">Tikalu 112</a>
       </div>
     </div>
   </div>
